syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1615
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarGainFlycloakNotify {
	uint32 flycloak_id = 2;
}
