// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "ProfilePicture.proto";

option java_package = "emu.grasscutter.net.proto";

message FleurFairPlayerStatInfo {
	string online_id = 11;
	uint32 uid = 8;
	ProfilePicture profile_picture = 1;
	uint32 stat_id = 3;
	uint32 head_image = 6;
	string nick_name = 15;
	int32 param = 5;
}
