syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 8194
// EnetChannelId: 0
// EnetIsReliable: true
message SetLimitOptimizationNotify {
	bool is_active = 11;
}
